# symmy

./: .kde-ci.yml  CMakeLists.txt  Messages.sh  README.md  TODO  gpgdecryptfileitemaction.cpp  gpgdecryptfileitemaction.h  gpgdecryptfileitemaction.json  gpgencryptfileitemaction.cpp  gpgencryptfileitemaction.h  gpgfileitemaction.cpp  gpgfileitemaction.h
desktop/: CMakeLists.txt  org.kde.symmy.appdata.xml  org.kde.symmy.desktop
doc/: CMakeLists.txt  index.docbook  man-symmy.1.docbook
plugins/: CMakeLists.txt  decryptfileitemaction.cpp  decryptfileitemaction.h  decryptfileitemaction.json  encryptfileitemaction.cpp  encryptfileitemaction.h  encryptfileitemaction.json
po/ar/: symmy.po
po/ca/: symmy.po
po/ca/docs/symmy/: man-symmy.1.docbook
po/ca@valencia/: symmy.po
po/cs/: symmy.po
po/de/: symmy.po
po/de/docs/symmy/: man-symmy.1.docbook
po/el/: symmy.po
po/en_GB/: symmy.po
po/eo/: symmy.po
po/es/: symmy.po
po/es/docs/symmy/: man-symmy.1.docbook
po/et/: symmy.po
po/eu/: symmy.po
po/fi/: symmy.po
po/fr/: symmy.po
po/ga/: symmy.po
po/gl/: symmy.po
po/he/: symmy.po
po/hu/: symmy.po
po/ia/: symmy.po
po/it/: symmy.po
po/it/docs/symmy/: man-symmy.1.docbook
po/ja/: symmy.po
po/ka/: symmy.po
po/ko/: symmy.po
po/lt/: symmy.po
po/nl/: symmy.po
po/nl/docs/symmy/: man-symmy.1.docbook
po/nn/: symmy.po
po/pl/: symmy.po
po/pt/: symmy.po
po/pt_BR/: symmy.po
po/pt_BR/docs/symmy/: man-symmy.1.docbook
po/ru/: symmy.po
po/sk/: symmy.po
po/sl/: symmy.po
po/sl/docs/symmy/: man-symmy.1.docbook
po/sv/: symmy.po
po/sv/docs/symmy/: man-symmy.1.docbook
po/tr/: symmy.po
po/tr/docs/symmy/: CMakeLists.txt  man-symmy.1.docbook
po/ug/: symmy.po
po/uk/: symmy.po
po/uk/docs/symmy/: man-symmy.1.docbook
po/zh_CN/: symmy.po
po/zh_TW/: symmy.po
src/: CMakeLists.txt  compositejob.cpp  compositejob.h  decryptjob.cpp  decryptjob.h  encryptjob.cpp  encryptjob.h  job.cpp  job.h  main.cpp
